--- a/phase4/package.json
+++ b/phase4/package.json
@@ -1,4 +1,17 @@
 {
+  "name": "phase4",
+  "version": "0.1.0",
+  "private": true,
+  "description": "",
+  "scripts": {
+    "client": "npm start --prefix client",
+    "server": "nodemon server/server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+  },
+  "engines": {
+    "node": "15.x"
+  },
   "dependencies": {
     "lodash": "^4.17.21",
     "react-table": "^7.7.0"
